# palautusrepositorio

./: README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: test_statistics_service.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/: .pylintrc  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: reset_counter.robot
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage  testitiedosto.txt
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: haara.txt  main.txt
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  peli_tehdas.py
